2002-06-17  Chris Jackson <chris@fluffhouse.org.uk>

	* lily/tuplet-bracket.cc:
	* lily/text-spanner.cc: 
	* lily/piano-pedal-engraver.cc: 
	* scm/grob-description.scm: 
	* scm/grob-property-description.scm: Changed the
	edge-width property of brackets to edge-widen. Changed the sign of
	the left element of edge-widen so a pair of equal numbers produces
	a symmetrical bracket.

2002-06-17  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* ly/espanol.ly: added.

	* lily/simple-spacer.cc (solve): remove assert.

2002-06-17  Han-Wen  <hanwen@cs.uu.nl>

	* lily/forbid-break-engraver.cc (class
	Forbid_line_break_engraver): new engraver: forbid linebreaks
	during playing notes

	* lily/spacing-spanner.cc (loose_column): add another check: don't
	move around bar lines as loose columns.

	* scm/basic-properties.scm (default-break-barline):  add pre-break
	for .| barline

2002-06-16  Jan Nieuwenhuizen  <janneke@gnu.org>

	* GNUmakefile.in (builddir-setup): Bugfix: include srcdir/tex as
	well as mf/out as subdirs of tex, for kpathsea to find through TEXMF.

	* scripts/lilypond-book.py (environment): Bugfix: update to new
	TEXMF scheme, from ly2dvi.

	* lily/lookup.cc (slur): Invoke bezier-bow.

	* scm/tex.scm (bezier-bow): 
	* scm/ps.scm (bezier-bow): Bezier sandwich with rounded endings
	(Previously named bezier-sandwich).
	
	* scm/tex.scm (bezier-sandwich):
	* scm/ps.scm (bezier-sandwich): Plain bezier sandwich.

	* make/lilypond.mandrake.spec.in (post): 
	* make/lilypond.suse.spec.in (post): 
	* make/lilypond.redhat.spec.in (post): Also remove parmesan fonts.
	
	* tex/lilyponddefs.tex: Uncomment feta character support.

	* Documentation/user/refman.itely (Pitches): Add espanol.ly
	description.

	* ly/catalan.ly: Add comment about (spanish) -s suffix.

	* ly/espanol.ly: Spanish note names by Carlos Garc'ia Su'arez
	<cgscqmp@terra.es>.

2002-06-14  Jan Nieuwenhuizen  <janneke@gnu.org>

	* GNUmakefile.in (short-examples):
	(long-examples): Bugfix for --srcdir build.