@@ -35,11 +35,13 @@ Moment
 Rhythmic_req::length_mom () const
 {
   Duration *d = unsmob_duration (get_mus_property ("duration"));
-  if (!d){
-    Moment m ;
-    programming_error("Rhythmic_req has no duration");
-    return m;
-  }
+  if (!d)
+    {
+      Moment m ;
+      programming_error("Rhythmic_req has no duration");
+      return m;
+    }
+  
   return d->length_mom ();
 }
 
